--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,18 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'ad-easy'
+
+ADEasyExt{
+    adSwitch = true
+    debug = true
+    adMobId = "ca-app-pub-7555156208216777~9662161045"
+    adMob = true
+    adYomob = true
+    adUnity = true
+    adMi = true
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -40,40 +52,40 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation(name: 'ADEasy-0.9.001', ext: 'aar')
+//    implementation(name: 'ADEasy-0.9.001', ext: 'aar')
 
     //请根据自己的需求，选择性接入对应的模块。ADEasy只会开启你接入了的广告平台的相关功能。
 
-    //Yomob广告
-    implementation(name: 'TGSDK.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADBaidu.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADGuangdiantong.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADMobvista.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADOneway.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADShenqiad.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADSigmob.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADUniplay.1.8.5', ext: 'aar')
-    implementation(name: 'TGSDKADYoads.1.8.5', ext: 'aar')
-
-    implementation 'com.squareup.okio:okio:2.2.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation 'com.tonyodev.fetch:fetch:1.1.5'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
-    //小米广告
-    implementation files('libs/mimoSdk-release.jar')
-
-    //Unity广告
-    implementation 'com.unity3d.ads:unity-ads:3.3.0'
-
-    //穿山甲广告//尚未支持
-    implementation(name: 'open_ad_sdk', ext: 'aar')
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
-
-    //admob
-    implementation 'com.google.android.gms:play-services-ads:18.3.0'
+//    //Yomob广告
+//    implementation(name: 'TGSDK.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADBaidu.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADGuangdiantong.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADMobvista.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADOneway.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADShenqiad.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADSigmob.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADUniplay.1.8.5', ext: 'aar')
+//    implementation(name: 'TGSDKADYoads.1.8.5', ext: 'aar')
+//
+//    implementation 'com.squareup.okio:okio:2.2.2'
+//    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+//    implementation 'com.tonyodev.fetch:fetch:1.1.5'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+//
+//    //小米广告
+//    implementation files('libs/mimoSdk-release.jar')
+//
+//    //Unity广告
+//    implementation 'com.unity3d.ads:unity-ads:3.3.0'
+//
+//    //穿山甲广告//尚未支持
+//    implementation(name: 'open_ad_sdk', ext: 'aar')
+//    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+//
+//    //admob
+//    implementation 'com.google.android.gms:play-services-ads:18.3.0'
 
     //其它的工具接入
 
