--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://raw.githubusercontent.com/TJHello/publicLib/master'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.TJHello.plugins:ADEasy:0.9.0001"
     }
 }
 
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://raw.githubusercontent.com/TJHello/publicLib/master'}
     }
 }
 
