--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:0.9.0109-a06"
+        classpath "com.TJHello.plugins:ADEasy:3.1.1303-t10"
     }
 }
 
