--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://raw.githubusercontent.com/TJHello/publicLib/master'}
+        maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:4.2.1304-t03"
+        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t17"
     }
 }
 
@@ -20,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://raw.githubusercontent.com/TJHello/publicLib/master'}
+        maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
     }
 }
 
