--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,14 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
+        maven { url 'http://127.0.0.1/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t30"
+        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t32"
     }
 }
 
@@ -21,6 +22,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
+        maven { url 'http://127.0.0.1/'}
     }
 }
 
