--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
-        maven { url 'http://127.0.0.1/'}
+        maven { url 'http://maven.tjhello.com/publicLib'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t32"
+        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t36"
     }
 }
 
@@ -21,8 +20,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://gitee.com/TJHello/publicLib/raw/master'}
-        maven { url 'http://127.0.0.1/'}
     }
 }
 
