--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'http://maven.tjhello.com/publicLib'}
+        maven { url 'https://tjhello.gitee.io/publiclib/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t40"
+        classpath "com.TJHello.plugins:ADEasy:5.3.2001-t41"
     }
 }
 
