--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,11 @@ ADEasyExt{
     adMi = false
     adGdt = false
     adFacebook = false
-    adByteDance = true
+    adByteDance = false
     adVungle = false
     adBaidu = false
+    adOneWay = false
+    adTopOn = false
 //    abTest = true //ABTest开关 https://github.com/TJHello/ABTest
 //    umeng = ['key'] //是否让ADEasy托管友盟,['key','deviceType(可选，默认1)','pushSecret(可选，默认null)']
 //    exclude = ['xxxx'] //例外掉某个包
