--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.4.21'
     repositories {
         google()
         jcenter()
         maven { url 'https://tjhello.gitee.io/publiclib/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.TJHello.plugins:ADEasy:6.3.2102-t17"
+        classpath "com.TJHello.plugins:ADEasy:8.3.2102-t42"//不支持4.1.x
+//        classpath "com.TJHello.plugins:ADEasy:7.3.2102-t41"//支持gradle 4.1.x以及以下
     }
 }
 
